src-tauri/check_log_main.txt
warning: unused import: `models::*`
  --> src\services\mod.rs:10:9
   |
10 | pub use models::*;
   |         ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `state::*`
  --> src\services\mod.rs:11:9
   |
11 | pub use state::*;
   |         ^^^^^^^^

warning: unused import: `Emitter`
  --> src\lib.rs:10:22
   |
10 | ...r, Emitter};
   |       ^^^^^^^

warning: function `fetch_messages` is never used
  --> src\services\social\mod.rs:60:14
   |
60 | ...fn fetch_messages(cl...
   |       ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `init` is never used
 --> src\services\media\p2d\mod.rs:4:8
  |
4 | pub fn init() {
  |        ^^^^

warning: field `id` is never read
  --> src\services\models.rs:74:9
   |
73 | ...truct DiscordUser {
   |          ----------- field in this struct
74 | ...ub id: String,
   |       ^^
   |
   = note: `DiscordUser` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis

warning: `p2cord` (lib) generated 6 warnings (run `cargo fix --lib -p p2cord` to apply 3 suggestions)
    Checking p2cord v0.1.0 (D:\_B\p2cord\src-tauri)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `p2d_lib`
 --> src\main.rs:8:5
  |
8 |     p2d_lib::run()
  |     ^^^^^^^ use of unresolved module or unlinked crate `p2d_lib`
  |
  = help: if you wanted to use a crate named `p2d_lib`, use `cargo add p2d_lib` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `p2cord` (bin "p2cord") due to 1 previous error
